--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="wrapper">
         <h2 class="question">Do you want to take my dick?</h2>
-        <img class="gif" alt="gif" src="https://media.giphy.com/media/FTGah7Mx3ss04PcasF/giphy.gif"/>
+        <img class="gif" alt="gif" src="https://giphy.com/gifs/gifnews-artists-on-tumblr-QkuqYvjWOZ3QA"/>
         <div class="btn-group">
             <button class="yes-btn">Yes</button>
             <button class="no-btn">No</button>
