--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="wrapper">
         <h2 class="question">Do you want to take my dick?</h2>
-        <img class="gif" alt="gif" src="https://giphy.com/gifs/gifnews-artists-on-tumblr-QkuqYvjWOZ3QA"/>
+        <img class="gif" alt="gif" src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExbDdsbGxzZXF0MjA5Zzhkb2hmMGhmY2UzZTFsNnQ0ZHN0ZXhpZW90ZSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/QkuqYvjWOZ3QA/giphy.gif"/>
         <div class="btn-group">
             <button class="yes-btn">Yes</button>
             <button class="no-btn">No</button>
